--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
     <div class="container">
         <header>
             <img src="images/profile.jpg" alt="个人照片" class="profile-photo">
-            <h1>你的名字</h1>
+            <h1>Tendourisu</h1>
             <p>这是一个简单的个人简介网站。</p>
         </header>
         <section class="skills">
             <h2>技能</h2>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>React</li>
+                <li>什</li>
+                <li>么</li>
+                <li>都</li>
+                <li>不</li>
+                <li>会</li>
             </ul>
         </section>
         <section class="interests">
             <h2>兴趣爱好</h2>
             <ul>
-                <li>阅读</li>
-                <li>音乐</li>
-                <li>旅行</li>
-                <li>电影</li>
+                <li>BA</li>
+                <li>Yuri</li>
+                <li>BGA</li>
+                <li>Fujita Kotone</li>
+                <li>AL1S</li>
             </ul>
         </section>
         <footer>
             <h2>社交媒体</h2>
             <ul class="social-media">
-                <li><a href="https://github.com/你的用户名" target="_blank">GitHub</a></li>
-                <li><a href="https://twitter.com/你的用户名" target="_blank">Twitter</a></li>
-                <li><a href="https://linkedin.com/in/你的用户名" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/Tendourisu" target="_blank">GitHub</a></li>
             </ul>
         </footer>
     </div>
